Fixing spacing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,7 @@ li {
 		.post-content h1 {
 			font-size: 1em;
 			line-height: normal;
+			margin-bottom: 1em;
 		}
 
 		.post-content p {
